--- a/khoa_luan/khoaluanNam.tex
+++ b/khoa_luan/khoaluanNam.tex
@@ -7,17 +7,23 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{url}
-\usepackage[style=numeric,backend=biber]{biblatex}
+%\usepackage[style=numeric ,backend=biber]{biblatex}
 \usepackage{indentfirst}
 \usepackage{ragged2e}
 %\usepackage[sort&compress,numbers]{natbib}
 %\usepackage[square,numbers]{natbib}
 %\bibliographystyle{abbrvnat}
 %\usepackage{natbib}
+%\usepackage{cite}
+%\bibliographystyle{plain}
+\usepackage[numbers]{natbib}
+\bibliographystyle{plainnat}
 
-\addto\captionsvietnamese{
-	\renewcommand{\bibname}{Tài liệu tham khảo}
-}
+%\addbibresource{reference.bib}
+
+%\addto\captionsvietnamese{
+%	\renewcommand{\bibname}{Tài liệu tham khảo}
+%}
 \setlength{\textwidth}{430pt}
 
 \newtheorem{nx}{Nhận xét}[section]
@@ -354,7 +360,7 @@ $$
 $$
 \indent Ma trận chỉ có một dòng được gọi là vector dòng. Ma trận chỉ có một cột được gọi là vector cột.
 \end{dn}
-\begin{dn}\cite{hung2020}
+\begin{dn}\cite{hung2000}
 	Ma trận vuông A cấp $n$ được gọi là ma trận khả nghịch nếu tồn tại một ma trận $\mathbf{A}^{\prime}$ vuông cấp $n$ thỏa mãn $\mathbf{A} \mathbf{A}^{\prime}=\mathbf{A}^{\prime} \mathbf{A}=\mathbf{I}_{n}$. Ma trận $\mathbf{A}$ được gọi là ma trận nghịch đảo của ma trận $\mathbf{A}$, và được ký hiệu là $\mathbf{A}^{-1}$
 \end{dn}
 \begin{dn}\cite{hieu2019} 
@@ -1073,7 +1079,7 @@ Phép phân tích thành phần chính được đưa ra vào năm 1901 bởi Ka
 Một trong những ứng dụng quan trọng nhất của phép phân tích thành phần chính là giảm số chiều của dữ liệu. Khi dữ liệu có số chiều lớn, việc phân tích và xử lý trở nên phức tạp và tốn nhiều thời gian. Đồng thời cho phép giảm số chiều của dữ liệu bằng cách xác định các thành phần chính của ma trận, giúp cho việc xử lý và phân tích dữ liệu trở nên đơn giản và nhanh chóng hơn.
 
 Ngoài ra, phép phân tích này còn được sử dụng để giảm tác động của nhiễu trong dữ liệu, phát hiện các mối quan hệ giữa các biến đầu vào và giúp tối ưu hóa các thuật toán máy học.Với những ứng dụng và lợi ích của mình, phép phân tích thành phần chính đã trở thành một công cụ quan trọng trong phân tích dữ liệu và được sử dụng rộng rãi trong nhiều lĩnh vực khác nhau.
-Nội dung trong chương này được tổng hợp chính từ các nguồn \cite{my2020}, \cite{tiep2018} và \cite{hyvarinen2009}
+Nội dung trong chương này được tổng hợp chính từ các nguồn \cite{my2020}, \cite{tiep2018} và \cite{hyvarinen2009}.
 
 \section{Ý tưởng}
 Giả sử dữ liệu ban đầu là $\mathbf{x} \in \mathbb{R}^{m}$ và dữ liệu đã được giảm chiều là $\mathbf{z} \in \mathbb{R}^{r}$ với $r<m$. Cách đơn giản nhất để giảm chiều dữ liệu từ $m$ về $r<m$ là chỉ cần giữ lại $r$ phần tử quan trọng nhất. Có hai câu hỏi được đặt ra ở đây:
@@ -1101,12 +1107,17 @@ Giả sử dữ liệu ban đầu là $\mathbf{x} \in \mathbb{R}^{m}$ và dữ l
 		liệu. Phương sai tỉ lệ thuận với độ phân tán của dữ liệu.}
 	\label{fig:pca_2}
 \end{figure}
-Giả sử vector dữ liệu ban đầu $\mathbf{x} \in \R^{D}$ được giảm chiều trở thành $\mathbf{z}
-\in \R^K$ với $K < D$. Một cách đơn giản để giảm chiều dữ liệu từ $D$ về $K < D$ là chỉ giữ lại $K$ phần tử {quan trọng nhất}. Có hai câu hỏi lập tức
-được đặt ra. Thứ nhất, làm thế nào để xác định {tầm quan trọng} của
-mỗi phần tử? Thứ hai, nếu tầm quan trọng của các phần tử là như
-nhau, ta cần bỏ đi những phần tử nào?
-
+%Giả sử vector dữ liệu ban đầu $\mathbf{x} \in \R^{D}$ được giảm chiều trở thành $\mathbf{z}
+%\in \R^K$ với $K < D$. Một cách đơn giản để giảm chiều dữ liệu từ $D$ về $K < D$ là chỉ giữ lại $K$ phần tử {quan trọng nhất}. 
+%Có hai câu hỏi lập tức
+%được đặt ra. 
+%\begin{itemize}
+%
+%\item Thứ nhất, làm thế nào để xác định {tầm quan trọng} của
+%mỗi phần tử? 
+%\item Thứ hai, nếu tầm quan trọng của các phần tử là như
+%nhau, ta cần bỏ đi những phần tử nào?
+%\end{itemize}
 Để trả lời câu hỏi thứ nhất, hãy quan sát Hình \ref{fig:pca_2a}. Giả sử các
 điểm dữ liệu có thành phần thứ hai (phương đứng) giống hệt nhau hoặc sai khác
 nhau không đáng kể (phương sai nhỏ). Khi đó, thành phần này hoàn toàn có thể được lược
@@ -1132,7 +1143,7 @@ phần. Phần còn lại chứa ít thông tin hơn có thể được lược 
 
 \section{Phân tích thành phần chính}
 
-Về mặt hình thức, cho ma trận dữ liệu $\mathbf{X} \in \mathbb{R}^{m \times n}$ với mỗi giá trị đã được chuẩn hóa sao cho mỗi cột có giá trị trung bình là 0. PCA của $\mathbf{X}$ với $r$ thành phần là tìm ma trận trực giao $\mathbf{A} \in \mathbb{R}^{m \times r}$ và ma trận $\mathbf{B} \in \mathbb{R}^{n \times r}$ sao cho $\mathbf{X}$ có thể biểu diễn được dưới dạng ma trận
+Về mặt hình thức, cho ma trận dữ liệu $\mathbf{X} \in \mathbb{R}^{m \times n}$ với mỗi giá trị đã được chuẩn hóa sao cho mỗi hàng có giá trị trung bình là 0. PCA của $\mathbf{X}$ với $r$ thành phần là tìm ma trận trực giao $\mathbf{A} \in \mathbb{R}^{m \times r}$ và ma trận $\mathbf{B} \in \mathbb{R}^{n \times r}$ sao cho $\mathbf{X}$ có thể biểu diễn được dưới dạng ma trận
 
 $$
 \mathbf{X}=\mathbf{A} \mathbf{B}^{T}+\mathbf{E}
@@ -1199,8 +1210,7 @@ Lưu ý rằng tất cả các $\lambda_{i}$ đều không âm đối với ma t
 \section{Tính duy nhất nghiệm của PCA}
 
 \begin{dl} \label{dl351}
-Nếu $(\mathbf{A, B})$ là một nghiệm của mô hình PCA thì $(\mathbf{A Q, B Q})$ cũng là một nghiệm của mô hình PCA, với $\mathbf{Q}$ là ma trận trực giao cấp $r$.
-
+Nếu $(\mathbf{A, B})$ là một nghiệm của mô hình PCA thì $(\mathbf{A Q, B Q})$ cũng là một nghiệm của mô hình PCA, với $\mathbf{Q}$ là ma trận trực giao cấp $r$.\\
 Lúc này, $\mathbf{Q}$ được gọi là phép quay trực giao.
 \end{dl}
 \begin{proof}
@@ -1227,8 +1237,7 @@ và
 
 $$
 \left\|\mathbf{X-A Q Q}^{T} \mathbf{B}^{T}\right\|^{2}=\left\|\mathbf{X-A B}^{T}\right\|^{2}
-$$
-
+$$\\
 Vậy $(\mathbf{A Q, B Q})$ là một nghiệm của mô hình PCA.
 \end{proof}
 Từ Định lí \ref{dl351}, ta có nhận xét sau:\\
@@ -1254,7 +1263,6 @@ $$
 - Bước 4: Nếu nghiệm $(\mathbf{A, B})$ chưa tốt thì chọn phép quay $\mathbf{Q}$, với $\mathbf{Q}$ là ma trận trực giao cấp $r$, ta tìm được nghiệm của mô hình $\mathrm{PCA}$ là $(\mathbf{A Q, B Q})$
 
 Cài đặt thuật toán trên PYTHON3 Hình \ref{fig:pca_algo} 
-\newpage
 \begin{figure}[htp]
 	\centering
 	\includegraphics[scale=0.8]{implement_pca.png}
@@ -1714,162 +1722,166 @@ Qua quá trình thực hiện khóa luận, tôi đã có cơ hội tìm hiểu 
 \end{itemize}
 Mặc dù chúng tôi đã cố gắng trình bày khóa luận một cách đầy đủ và chi tiết, nhưng khó tránh khỏi những thiếu sót do hạn chế về thời gian và trình độ. Chúng tôi rất mong nhận được những ý kiến đóng góp từ Quý Thầy, Cô và các bạn để khóa luận có thể hoàn thiện hơn.
 
+%\bibliographystyle{plain} % or {unsrt} for non-alphabetical order
+%\bibliographystyle{plainnat}
+\bibliography{reference} % mybib.bib is the name of your .bib file
 
-\begin{thebibliography}{99}
-\addcontentsline{toc}{chapter}{Tài liệu tham khảo}
-\bibitem{an2015}
-Trần Hồng An,
-\emph{Giáo trình đại số tuyến tính},
-Tài liệu lưu hành nội bộ Trường Dại học Công Nghệ Thông Tin, (2015).
-
-\bibitem{hieu2019}
-Lê Thanh Hiếu,
-\emph{Bài giảng đại số tuyến tính},
-Tài liệu lưu hành nội bộ, (2019).
-
-\bibitem{hung2000}
-Nguyễn Hữu Việt Hưng,
-\emph{Giáo trình đại số tuyến tính 1,2},
-Nhà xuất bản Đại học Quốc gia Hà Nội (2000).
-
-\bibitem{linh2016}
-Nguyễn Trần Nhật Linh,
-\emph{Phân tích giá trị kì dị và một số ứng dụng},
-Luận văn thạc sĩ (2016).
-
-\bibitem{my2020}
-Nguyễn THị Ái My,
-\emph{Một số mô hình phân tích thành phần chính ba chiều},
-Luận văn thạc sĩ (2020).
-
-\bibitem{thuan2003}
-Nguyễn Duy Thuận, Phi Mạnh Ban, Nông Quốc Chinh,
-\emph{Dại số tuyến tính},
-Nhà xuất bản Đại học Sư phạm, (2003)
-
-\bibitem{tiep2018}
-Vũ Hữu Tiệp,
-\emph{Machine Learning cơ bản},
-Nhà xuất bản Khoa học và Kỹ thuật, (2018).
-
-\bibitem{tri2014}
-Nguyễn Đình Trí (Chủ biên), Tạ Văn Đĩnh, Nguyễn Hồ Quỳnh
-\emph{Toán học cao cấp Tập II}
- Nhà xuất bản Giáo dục Việt Nam.(2014).
-
-\bibitem{cristianini2000}
-Cristianini, N., Shawe-Taylor
-\emph{An Introduction to Support Vector Machines and other kernel-based learning methods},
-Cambridge University Press, Cambrigde, 2000.
-\bibitem{eckart1936}
-Eckart, C.; Young, G.
-\emph{ The approximation of one matrix by another of lower rank}. Psychometrika. 1 (3): 211–8. doi:10.1007/BF02288367. S2CID 10163399.(1936)
-
-\bibitem{huang}
-Gary B. Huang, Manu Ramesh, Tamara Berg, and Erik Learned-Miller
-\emph{Labeled Faces in the Wild: A Database for Studying
-Face Recognition in Unconstrained Environments}
-
-\bibitem{hyvarinen2009}
-Aapo Hyvärinen,
-\emph{Principal component analysis},
-Based on material from the book Natural Image Statistics to be published by Springer-Verlag in 2009.
-
-%\bibitem{meyer2000}
-%Carl D. Meyer,
-%\emph{Matrix analysis and applied linear algebra},
-%SIAM, Philadelphia 2000.
-
-
-\bibitem{lay1994}
-David C. Lay,
-\emph{Linear algebra and its applications},
-Addison-Wesley, Reading, MA, 1994.
-
-
-
-%\bibitem{harshman1970}
-%Harshman R. A.,
-%\emph{Foundations of Parafac procedure: Models and conditions for an "explanatory" multimodal factor analysis},
-%UCLA Working papers in Phonetics, 16, p.1-84, 1970.
-
-%\bibitem{good1969}
-%I. J. Good,
-%\emph{Some applications of the singular value decomposition of matrix},
-%Technometrics, 11, p. 823-831, 1969.
-
-
-\bibitem{stewart1993}
-Stewart G. W.,
-\emph{On the early history of the singular value decomposition},
-SIAM Review, 35, p. 551-566, 1993.
-
-
-%\bibitem{website}
-%\url{https://en.wikipedia.org/wiki/Singular_value_decomposition#History}
-\bibitem{vaswani2017}
-Ashish Vaswani, Noam Shazeer, Niki Parmar, Jakob Uszkoreit, Llion Jones, Aidan N Gomez, lukasz Kaiser, and Illia Polosukhin.
-\emph{Attention is all you need.}
-In Advances in neural information processing systems, pp. 5998–6008,2017.
-
-\bibitem{ott2018}
-Myle Ott, Sergey Edunov, David Grangier, and Michael Auli.
-\emph{Scaling neural machine translation.}
-In Proceedings of the Third Conference on Machine Translation: Research Papers, 2018.
-
-\bibitem{raffel2019}
-Colin Raffel, Noam Shazeer, Adam Roberts, Katherine Lee, Sharan Narang, Michael Matena, Yanqi
-Zhou, Wei Li, and Peter J Liu. 
-\emph{Exploring the limits of transfer learning with a unified text-to-text
-	transformer.}
-arXiv preprint arXiv:1910.10683, 2019.
-
-\bibitem{wang2020}
-Sinong Wang, Belinda Z. Li, Madian Khabsa, Han Fang, Hao Ma
-\emph{Linformer: Self-Attention with Linear Complexity}
-arXiv preprint arXiv:2006.04768, 2020.
-
-\bibitem{brown2020}
-Tom B Brown, Benjamin Mann, Nick Ryder, Melanie Subbiah, Jared Kaplan, Prafulla Dhariwal,
-Arvind Neelakantan, Pranav Shyam, Girish Sastry, Amanda Askell, et al. 
-\emph{Language models are few-shot learners.}
-arXiv preprint arXiv:2005.14165, 2020.
-
-\bibitem{devlin2019}
-Jacob Devlin, Ming-Wei Chang, Kenton Lee, and Kristina Toutanova.
-\emph{Bert: Pre-training of deep bidirectional transformers for language understanding.}
-In Proceedings of the 2019 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies 2019
-
-\bibitem{radford2019}
-Alec Radford, Jeffrey Wu, Rewon Child, David Luan, Dario Amodei, and Ilya Sutskever. 
-\emph{Language models are unsupervised multitask learners.}
-OpenAI Blog, 2019.
-
-\bibitem{hinton2015}
-Geoffrey Hinton, Oriol Vinyals, and Jeff Dean.
-\emph{Distilling the knowledge in a neural network.}
-arXiv preprint arXiv:1503.02531, 2015.
-
-\bibitem{child2019}
-Rewon Child, Scott Gray, Alec Radford, and Ilya Sutskever.
-\emph{Generating long sequences with sparse transformers.}
-arXiv preprint arXiv:1904.10509, 2019.
-
-\bibitem{qiu2019}
-Jiezhong Qiu, Hao Ma, Omer Levy, Scott Wen-tau Yih, Sinong Wang, and Jie Tang. 
-\emph{Blockwise self-attention for long document understanding.}
-arXiv preprint arXiv:1911.02972, 2019.
-
-\bibitem{beltagy2020}
-Iz Beltagy, Matthew E Peters, and Arman Cohan. 
-\emph{Longformer: The long-document transformer.}
-arXiv preprint arXiv:2004.05150, 2020.
-
-\bibitem{kitaev2020}
-Nikita Kitaev, Lukasz Kaiser, and Anselm Levskaya. 
-\emph{Reformer: The efficient transformer.} 
-In International Conference on Learning Representations, 2020
-	\end{thebibliography}
+%\printbibliography
+%\begin{thebibliography}{99}
+%\addcontentsline{toc}{chapter}{Tài liệu tham khảo}
+%\bibitem{an2015}
+%Trần Hồng An,
+%\emph{Giáo trình đại số tuyến tính},
+%Tài liệu lưu hành nội bộ Trường Dại học Công Nghệ Thông Tin, (2015).
+%
+%\bibitem{hieu2019}
+%Lê Thanh Hiếu,
+%\emph{Bài giảng đại số tuyến tính},
+%Tài liệu lưu hành nội bộ, (2019).
+%
+%\bibitem{hung2000}
+%Nguyễn Hữu Việt Hưng,
+%\emph{Giáo trình đại số tuyến tính 1,2},
+%Nhà xuất bản Đại học Quốc gia Hà Nội (2000).
+%
+%\bibitem{linh2016}
+%Nguyễn Trần Nhật Linh,
+%\emph{Phân tích giá trị kì dị và một số ứng dụng},
+%Luận văn thạc sĩ (2016).
+%
+%\bibitem{my2020}
+%Nguyễn THị Ái My,
+%\emph{Một số mô hình phân tích thành phần chính ba chiều},
+%Luận văn thạc sĩ (2020).
+%
+%\bibitem{thuan2003}
+%Nguyễn Duy Thuận, Phi Mạnh Ban, Nông Quốc Chinh,
+%\emph{Dại số tuyến tính},
+%Nhà xuất bản Đại học Sư phạm, (2003)
+%
+%\bibitem{tiep2018}
+%Vũ Hữu Tiệp,
+%\emph{Machine Learning cơ bản},
+%Nhà xuất bản Khoa học và Kỹ thuật, (2018).
+%
+%\bibitem{tri2014}
+%Nguyễn Đình Trí (Chủ biên), Tạ Văn Đĩnh, Nguyễn Hồ Quỳnh
+%\emph{Toán học cao cấp Tập II}
+% Nhà xuất bản Giáo dục Việt Nam.(2014).
+%
+%\bibitem{cristianini2000}
+%Cristianini, N., Shawe-Taylor
+%\emph{An Introduction to Support Vector Machines and other kernel-based learning methods},
+%Cambridge University Press, Cambrigde, 2000.
+%\bibitem{eckart1936}
+%Eckart, C.; Young, G.
+%\emph{ The approximation of one matrix by another of lower rank}. Psychometrika. 1 (3): 211–8. doi:10.1007/BF02288367. S2CID 10163399.(1936)
+%
+%\bibitem{huang}
+%Gary B. Huang, Manu Ramesh, Tamara Berg, and Erik Learned-Miller
+%\emph{Labeled Faces in the Wild: A Database for Studying
+%Face Recognition in Unconstrained Environments}
+%
+%\bibitem{hyvarinen2009}
+%Aapo Hyvärinen,
+%\emph{Principal component analysis},
+%Based on material from the book Natural Image Statistics to be published by Springer-Verlag in 2009.
+%
+%%\bibitem{meyer2000}
+%%Carl D. Meyer,
+%%\emph{Matrix analysis and applied linear algebra},
+%%SIAM, Philadelphia 2000.
+%
+%
+%\bibitem{lay1994}
+%David C. Lay,
+%\emph{Linear algebra and its applications},
+%Addison-Wesley, Reading, MA, 1994.
+%
+%
+%
+%%\bibitem{harshman1970}
+%%Harshman R. A.,
+%%\emph{Foundations of Parafac procedure: Models and conditions for an "explanatory" multimodal factor analysis},
+%%UCLA Working papers in Phonetics, 16, p.1-84, 1970.
+%
+%%\bibitem{good1969}
+%%I. J. Good,
+%%\emph{Some applications of the singular value decomposition of matrix},
+%%Technometrics, 11, p. 823-831, 1969.
+%
+%
+%\bibitem{stewart1993}
+%Stewart G. W.,
+%\emph{On the early history of the singular value decomposition},
+%SIAM Review, 35, p. 551-566, 1993.
+%
+%
+%%\bibitem{website}
+%%\url{https://en.wikipedia.org/wiki/Singular_value_decomposition#History}
+%\bibitem{vaswani2017}
+%Ashish Vaswani, Noam Shazeer, Niki Parmar, Jakob Uszkoreit, Llion Jones, Aidan N Gomez, lukasz Kaiser, and Illia Polosukhin.
+%\emph{Attention is all you need.}
+%In Advances in neural information processing systems, pp. 5998–6008,2017.
+%
+%\bibitem{ott2018}
+%Myle Ott, Sergey Edunov, David Grangier, and Michael Auli.
+%\emph{Scaling neural machine translation.}
+%In Proceedings of the Third Conference on Machine Translation: Research Papers, 2018.
+%
+%\bibitem{raffel2019}
+%Colin Raffel, Noam Shazeer, Adam Roberts, Katherine Lee, Sharan Narang, Michael Matena, Yanqi
+%Zhou, Wei Li, and Peter J Liu. 
+%\emph{Exploring the limits of transfer learning with a unified text-to-text
+%	transformer.}
+%arXiv preprint arXiv:1910.10683, 2019.
+%
+%\bibitem{wang2020}
+%Sinong Wang, Belinda Z. Li, Madian Khabsa, Han Fang, Hao Ma
+%\emph{Linformer: Self-Attention with Linear Complexity}
+%arXiv preprint arXiv:2006.04768, 2020.
+%
+%\bibitem{brown2020}
+%Tom B Brown, Benjamin Mann, Nick Ryder, Melanie Subbiah, Jared Kaplan, Prafulla Dhariwal,
+%Arvind Neelakantan, Pranav Shyam, Girish Sastry, Amanda Askell, et al. 
+%\emph{Language models are few-shot learners.}
+%arXiv preprint arXiv:2005.14165, 2020.
+%
+%\bibitem{devlin2019}
+%Jacob Devlin, Ming-Wei Chang, Kenton Lee, and Kristina Toutanova.
+%\emph{Bert: Pre-training of deep bidirectional transformers for language understanding.}
+%In Proceedings of the 2019 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies 2019
+%
+%\bibitem{radford2019}
+%Alec Radford, Jeffrey Wu, Rewon Child, David Luan, Dario Amodei, and Ilya Sutskever. 
+%\emph{Language models are unsupervised multitask learners.}
+%OpenAI Blog, 2019.
+%
+%\bibitem{hinton2015}
+%Geoffrey Hinton, Oriol Vinyals, and Jeff Dean.
+%\emph{Distilling the knowledge in a neural network.}
+%arXiv preprint arXiv:1503.02531, 2015.
+%
+%\bibitem{child2019}
+%Rewon Child, Scott Gray, Alec Radford, and Ilya Sutskever.
+%\emph{Generating long sequences with sparse transformers.}
+%arXiv preprint arXiv:1904.10509, 2019.
+%
+%\bibitem{qiu2019}
+%Jiezhong Qiu, Hao Ma, Omer Levy, Scott Wen-tau Yih, Sinong Wang, and Jie Tang. 
+%\emph{Blockwise self-attention for long document understanding.}
+%arXiv preprint arXiv:1911.02972, 2019.
+%
+%\bibitem{beltagy2020}
+%Iz Beltagy, Matthew E Peters, and Arman Cohan. 
+%\emph{Longformer: The long-document transformer.}
+%arXiv preprint arXiv:2004.05150, 2020.
+%
+%\bibitem{kitaev2020}
+%Nikita Kitaev, Lukasz Kaiser, and Anselm Levskaya. 
+%\emph{Reformer: The efficient transformer.} 
+%In International Conference on Learning Representations, 2020
+%	\end{thebibliography}
 \end{document}
 
 
