--- a/khoa_luan/reference.bib
+++ b/khoa_luan/reference.bib
@@ -1,14 +1,14 @@
 @book{an2015,
 	title={Giáo trình đại số tuyến tính},
 	author={Trần Hồng An},
-	publisher={Trường Dại học Công Nghệ Thông Tin, 2015}
+	publisher={Trường Dại học Công Nghệ Thông Tin},
 	year={2015},
 }
 
 @book{hieu2019,
 	title={Bài giảng đại số tuyến tính},
 	author={Lê Thanh Hiếu},
-	publisher={Tài liệu lưu hành nội bộ, 2019}
+	publisher={Tài liệu lưu hành nội bộ},
 	year={2019},
 }
 
@@ -22,14 +22,14 @@
 @mastersthesis{linh2016,
 	title={Phân tích giá trị kì dị và một số ứng dụng},
 	author={Nguyễn Trần Nhật Linh},
-	school={Đại Học Quy Nhơn},
+	school={Quy Nhon University},
 	year={2016},
 }
 
 @mastersthesis{my2020,
 	title={Một số mô hình phân tích thành phần chính ba chiều},
 	author={Nguyễn Thị Ái My},
-	school={Đại Học Quy Nhơn}, 
+	school={Quy Nhon University}, 
 	year={2020},
 }
 
@@ -54,7 +54,6 @@
 	publisher={Nhà xuất bản Giáo dục Việt Nam},
 	year={2014},
 }
-
 @book{cristianini2000,
 	title={An Introduction to Support Vector Machines and other kernel-based learning methods},
 	author={Cristianini, N. and Shawe-Taylor},
@@ -158,43 +157,39 @@
 	booktitle={Workshop at ICLR},
 	year={2013},
 }
-@online{hinton2015,
-author    = {Geoffrey Hinton and Oriol Vinyals and Jeff Dean},
-title     = {Distilling the knowledge in a neural network},
-year      = 2015,
-eprint    = {1503.02531},
-eprinttype= {arXiv},
+@misc{hinton2015,
+	author = {Geoffrey Hinton and Oriol Vinyals and Jeff Dean},
+	title = {Distilling the knowledge in a neural network},
+	year = {2015},
+	note = {arXiv preprint arXiv:1503.02531},
 }
 
-@online{radford2019,
-author    = {Alec Radford and Jeffrey Wu and Rewon Child and David Luan and Dario Amodei and Ilya Sutskever},
-title     = {Language models are unsupervised multitask learners},
-year      = 2019,
-howpublished = {OpenAI Blog},
+@misc{radford2019,
+	author = {Alec Radford and Jeffrey Wu and Rewon Child and David Luan and Dario Amodei and Ilya Sutskever},
+	title = {Language models are unsupervised multitask learners},
+	year = {2019},
+	howpublished = {OpenAI Blog},
 }
 
-@online{child2019,
-author    = {Rewon Child and Scott Gray and Alec Radford and Ilya Sutskever},
-title     = {Generating long sequences with sparse transformers},
-year      = 2019,
-eprint    = {1904.10509},
-eprinttype= {arXiv},
+@misc{child2019,
+	author = {Rewon Child and Scott Gray and Alec Radford and Ilya Sutskever},
+	title = {Generating long sequences with sparse transformers},
+	year = {2019},
+	note = {arXiv preprint arXiv:1904.10509},
 }
 
-@online{qiu2019,
-author    = {Jiezhong Qiu and Hao Ma and Omer Levy and Scott Wen-tau Yih and Sinong Wang and Jie Tang},
-title     = {Blockwise self-attention for long document understanding},
-year      = 2019,
-eprint    = {1911.02972},
-eprinttype= {arXiv},
+@misc{qiu2019,
+	author = {Jiezhong Qiu and Hao Ma and Omer Levy and Scott Wen-tau Yih and Sinong Wang and Jie Tang},
+	title = {Blockwise self-attention for long document understanding},
+	year = {2019},
+	note = {arXiv preprint arXiv:1911.02972},
 }
 
-@online{beltagy2020,
-author    = {Iz Beltagy and Matthew E Peters and Arman Cohan},
-title     = {Longformer: The long-document transformer},
-year      = 2020,
-eprint    = {2004.05150},
-eprinttype= {arXiv},
+@misc{beltagy2020,
+	author = {Iz Beltagy and Matthew E Peters and Arman Cohan},
+	title = {Longformer: The long-document transformer},
+	year = {2020},
+	note = {arXiv preprint arXiv:2004.05150},
 }
 
 @inproceedings{kitaev2020,
