--- a/khoa_luan/refen.bib
+++ b/khoa_luan/refen.bib
@@ -1,7 +1,7 @@
 @book{an2015,
 	title={Giáo trình đại số tuyến tính},
 	author={Trần Hồng An},
-	publisher={Trường Dại học Công Nghệ Thông Tin, 2015},
+	publisher={Trường Dại học Công Nghệ Thông Tin},
 	year={2015},
 	keywords = {vietnamese},
 }
@@ -9,7 +9,7 @@
 @book{hieu2019,
 	title={Bài giảng đại số tuyến tính},
 	author={Lê Thanh Hiếu},
-	publisher={Tài liệu lưu hành nội bộ, 2019},
+	publisher={Tài liệu lưu hành nội bộ},
 	year={2019},
 	keywords = {vietnamese},
 }
@@ -25,18 +25,21 @@
 @mastersthesis{linh2016,
 	title={Phân tích giá trị kì dị và một số ứng dụng},
 	author={Nguyễn Trần Nhật Linh},
-	school={Quy Nhon University},
+	school={Đại học Quy Nhơn},
 	year={2016},
+	type={Luận Văn Thạc Sĩ},
 	keywords = {vietnamese},
 }
 
 @mastersthesis{my2020,
 	title={Một số mô hình phân tích thành phần chính ba chiều},
 	author={Nguyễn Thị Ái My},
-	school={Quy Nhon University}, 
+	school={Đại học Quy Nhơn }, 
 	year={2020},
+	type={Luận Văn Thạc Sĩ},
 	keywords = {vietnamese},
 }
+
 
 
 @book{thuan2003,
@@ -67,6 +70,7 @@
 	author={Cristianini, N. and Shawe-Taylor},
 	publisher={Cambridge University Press},
 	year={2000},
+	keywords = {english}
 }
 
 @article{eckart1936,
@@ -75,15 +79,16 @@
 	journal={Psychometrika},
 	volume={1},
 	number={3},
-	pages={211--218},
 	doi={10.1007/BF02288367},
 	year={1936},
+	keywords = {english}
 }
 
 @book{huang,
 	title={Labeled Faces in the Wild: A Database for Studying Face Recognition in Unconstrained Environments},
 	author={Gary B. Huang and Manu Ramesh and Tamara Berg and Erik Learned-Miller},
 	year={2007},
+	keywords = {english}
 }
 
 @book{hyvarinen2009,
@@ -91,6 +96,7 @@
 	author={Aapo Hyvärinen},
 	note={Based on material from the book Natural Image Statistics to be published by Springer-Verlag in 2009},
 	year={2009},
+	keywords = {english}
 }
 
 @book{lay1994,
@@ -98,6 +104,7 @@
 	author={David C. Lay},
 	publisher={Addison-Wesley},
 	year={1994},
+	keywords = {english}
 }
 
 @article{stewart1993,
@@ -105,23 +112,24 @@
 	author={Stewart, G. W.},
 	journal={SIAM Review},
 	volume={35},
-	pages={551--566},
 	year={1993},
+	keywords = {english}
 }
 
-@inproceedings{vaswani2017,
+@article{vaswani2017,
 	title={Attention is all you need},
 	author={Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N Gomez and lukasz Kaiser and Illia Polosukhin},
-	booktitle={Advances in neural information processing systems},
-	pages={5998–6008},
+	journal={ Advances in neural information processing systems},
 	year={2017},
+	keywords = {english}
 }
 
-@inproceedings{ott2018,
+@article{ott2018,
 	title={Scaling neural machine translation},
 	author={Myle Ott and Sergey Edunov and David Grangier and Michael Auli},
-	booktitle={Proceedings of the Third Conference on Machine Translation: Research Papers},
+	journal={Proceedings of the Third Conference on Machine Translation: Research Papers},
 	year={2018},
+	keywords = {english}
 }
 
 @article{raffel2019,
@@ -129,6 +137,7 @@
 	author={Colin Raffel and Noam Shazeer and Adam Roberts and Katherine Lee and Sharan Narang and Michael Matena and Yanqi Zhou and Wei Li and Peter J Liu},
 	journal={arXiv preprint arXiv:1910.10683},
 	year={2019},
+	keywords = {english}
 }
 
 @article{wang2020,
@@ -136,20 +145,24 @@
 	author={Sinong Wang and Belinda Z. Li and Madian Khabsa and Han Fang and Hao Ma},
 	journal={arXiv preprint arXiv:2006.04768},
 	year={2020},
+	keywords = {english}
 }
 
 @article{brown2020,
 	title={Language models are few-shot learners},
-	author={Tom B Brown and Benjamin Mann and Nick Ryder and Melanie Subbiah and Jared Kaplan and Prafulla Dhariwal and Arvind Neelakantan and Pranav Shyam and Girish Sastry and Amanda Askell and others},
+	author={Tom B. Brown and Benjamin Mann and Nick Ryder and Melanie Subbiah and Jared Kaplan and Prafulla Dhariwal and Arvind Neelakantan and Pranav Shyam and Girish Sastry and Amanda Askell and Sandhini Agarwal and Ariel Herbert-Voss and Gretchen Krueger and Tom Henighan and Rewon Child and Aditya Ramesh and Daniel M. Ziegler and Jeffrey Wu and Clemens Winter and Christopher Hesse and Mark Chen and Eric Sigler and Mateusz Litwin and Scott Gray and Benjamin Chess and Jack Clark and Christopher Berner and Sam McCandlish and Alec Radford and Ilya Sutskever and Dario Amodei},
 	journal={arXiv preprint arXiv:2005.14165},
 	year={2020},
+	keywords = {english}
 }
+
 
 @article{devlin2019,
 	title={BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding},
 	author={Jacob Devlin and Ming-Wei Chang and Kenton Lee and Kristina Toutanova},
 	journal={arXiv preprint arXiv:1810.04805},
 	year={2019},
+	keywords = {english}
 }
 
 @article{bojanowski2017,
@@ -157,6 +170,7 @@
 	author={Piotr Bojanowski and Edouard Grave and Armand Joulin and Tomas Mikolov},
 	journal={arXiv preprint arXiv:1607.04606},
 	year={2017},
+	keywords = {english}
 }
 
 @inproceedings{mikolov2013,
@@ -164,45 +178,57 @@
 	author={Tomas Mikolov and Kai Chen and Greg Corrado and Jeffrey Dean},
 	booktitle={Workshop at ICLR},
 	year={2013},
+	keywords = {english}
 }
-@misc{hinton2015,
-	author = {Geoffrey Hinton and Oriol Vinyals and Jeff Dean},
-	title = {Distilling the knowledge in a neural network},
-	year = {2015},
-	note = {arXiv preprint arXiv:1503.02531},
+@online{hinton2015,
+	author    = {Geoffrey Hinton and Oriol Vinyals and Jeff Dean},
+	title     = {Distilling the knowledge in a neural network},
+	year      = {2015},
+	eprint    = {1503.02531},
+	eprinttype= {arXiv},
+	keywords = {english}
 }
 
-@misc{radford2019,
-	author = {Alec Radford and Jeffrey Wu and Rewon Child and David Luan and Dario Amodei and Ilya Sutskever},
-	title = {Language models are unsupervised multitask learners},
-	year = {2019},
+@online{radford2019,
+	author    = {Alec Radford and Jeffrey Wu and Rewon Child and David Luan and Dario Amodei and Ilya Sutskever},
+	title     = {Language models are unsupervised multitask learners},
+	year      = 2019,
 	howpublished = {OpenAI Blog},
+	keywords = {english}
 }
 
-@misc{child2019,
-	author = {Rewon Child and Scott Gray and Alec Radford and Ilya Sutskever},
-	title = {Generating long sequences with sparse transformers},
-	year = {2019},
-	note = {arXiv preprint arXiv:1904.10509},
+@online{child2019,
+	author    = {Rewon Child and Scott Gray and Alec Radford and Ilya Sutskever},
+	title     = {Generating long sequences with sparse transformers},
+	year      = 2019,
+	eprint    = {1904.10509},
+	eprinttype= {arXiv},
+	keywords = {english}
 }
 
-@misc{qiu2019,
-	author = {Jiezhong Qiu and Hao Ma and Omer Levy and Scott Wen-tau Yih and Sinong Wang and Jie Tang},
-	title = {Blockwise self-attention for long document understanding},
-	year = {2019},
-	note = {arXiv preprint arXiv:1911.02972},
+@online{qiu2019,
+	author    = {Jiezhong Qiu and Hao Ma and Omer Levy and Scott Wen-tau Yih and Sinong Wang and Jie Tang},
+	title     = {Blockwise self-attention for long document understanding},
+	year      = 2019,
+	eprint    = {1911.02972},
+	eprinttype= {arXiv},
+	keywords = {english}
 }
 
-@misc{beltagy2020,
-	author = {Iz Beltagy and Matthew E Peters and Arman Cohan},
-	title = {Longformer: The long-document transformer},
-	year = {2020},
-	note = {arXiv preprint arXiv:2004.05150},
+@online{beltagy2020,
+	author    = {Iz Beltagy and Matthew E Peters and Arman Cohan},
+	title     = {Longformer: The long-document transformer},
+	year      = 2020,
+	eprint    = {2004.05150},
+	eprinttype= {arXiv},
+	keywords = {english}
 }
 
-@inproceedings{kitaev2020,
+@article{kitaev2020,
 	author    = {Nikita Kitaev and Lukasz Kaiser and Anselm Levskaya},
 	title     = {Reformer: The efficient transformer},
-	booktitle = {International Conference on Learning Representations},
+	journal = {International Conference on Learning Representations},
 	year      = 2020,
+	keywords = {english}
 }
+
