--- a/svd.ipynb
+++ b/svd.ipynb
@@ -18,15 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def svd(A):\n",
     "    # Compute the eigenvectors and eigenvalues of A.T @ A\n",
-    "    w, V = LA.eig(np.nan_to_num(A.T @ A))  \n",
+    "    w, V = LA.eig(A.T @ A)  \n",
     "    # Calculate sigma values (singular values)\n",
-    "    sigma = np.sqrt(np.abs(w))\n",
+    "    sigma = np.sqrt(w)\n",
     "    # Sort singular values and corresponding columns\n",
     "    sorted_indices = np.argsort(sigma)[::-1]\n",
     "    sigma = sigma[sorted_indices]\n",
